@@ -7,24 +7,23 @@ import org.commonmark.parser.Parser;
 import org.commonmark.renderer.html.HtmlRenderer;
 import org.springframework.util.StringUtils;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class MarkDownUtil {
     /**
      * 转换md格式为html
      *
-     * @param markdownString
-     * @return
+     * @param markdownString markdown 格式字符串
+     * @return html 格式字符串
      */
     public static String mdToHtml(String markdownString) {
         if (!StringUtils.hasText(markdownString)) {
             return "";
         }
-        java.util.List<Extension> extensions = Arrays.asList(TablesExtension.create());
+        List<Extension> extensions = List.of(TablesExtension.create());
         Parser parser = Parser.builder().extensions(extensions).build();
         Node document = parser.parse(markdownString);
         HtmlRenderer renderer = HtmlRenderer.builder().extensions(extensions).build();
-        String content = renderer.render(document);
-        return content;
+        return renderer.render(document);
     }
 }
